Update Análise de ponto isoelétrico - CONCLUÍDO.ipynb

--- a/Análise de ponto isoelétrico - CONCLUÍDO.ipynb
+++ b/Análise de ponto isoelétrico - CONCLUÍDO.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# análise da distribuição dos pontos isoelétricos de proteínas presentes no proteoma da espécie Saccharomyces cerevisiae\n",
+    "# análise da distribuição dos pontos isoelétricos de proteínas presentes em proteomas da UNIPROT\n",
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
