Update Análise de ponto isoelétrico - CONCLUÍDO.ipynb

--- a/Análise de ponto isoelétrico - CONCLUÍDO.ipynb
+++ b/Análise de ponto isoelétrico - CONCLUÍDO.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# análise da distribuição dos pontos isoelétricos de proteínas presentes em proteomas da UNIPROT\n",
+    "# análise da distribuição dos pontos isoelétricos de proteínas presentes em proteomas UNIPROT\n",
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -54,7 +54,6 @@
     "    hist = plt.hist(pi_list, bins = 50, range = (3, 13), histtype = \"bar\", color = \"darkorange\", alpha = 0.75, edgecolor = \"black\")\n",
     "    plt.xlabel(\"Ponto isoelétrico\")\n",
     "    plt.ylabel(\"Nº de proteínas anotadas\")\n",
-    "    plt.savefig(\"PIdist/\" + file_name[:-4] + \".png\", transparent = True)\n",
     "    plt.show()\n",
     "    \n",
     "    # returns finais\n",
