--- a/Análise de ponto isoelétrico.ipynb
+++ b/Análise de ponto isoelétrico.ipynb
@@ -57,7 +57,7 @@
     "    data_frame = pd.DataFrame(dic_list)\n",
     "    \n",
     "    # outputs do histograma\n",
-    "    hist = plt.hist(pi_list, bins = 50, range = (3, 13), histtype = \"bar\", color = \"darkorange\", alpha = 0.75, edgecolor = \"black\")\n",
+    "    hist = plt.hist(pi_list, bins = 50, range = None, histtype = \"bar\", color = \"darkorange\", alpha = 0.75, edgecolor = \"black\")\n",
     "    plt.xlabel(\"Ponto isoelétrico\")\n",
     "    plt.ylabel(\"Nº de proteínas anotadas\")\n",
     "    plt.savefig(\"PIdist/\" + file_name[:-4] + \".png\", transparent = True)\n",
