--- a/Youtube video tag extract program.ipynb
+++ b/Youtube video tag extract program.ipynb
@@ -150,6 +150,42 @@
     "# aplicar a função\n",
     "inp2 = input(\"\\nLink do vídeo: \")\n",
     "print(tag_extract2(inp2))"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "output = requests.get(\"https://www.youtube.com/watch?v=WiyIhiYLD7M\").text\n",
+    "print(output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
